feat: implement comprehensive UI translations across 14+ tabs
- Translated 82+ UI strings across major tab components
- Updated 6 JSON translation files with new keys
- Added translation hooks to all remaining tabs

Translation coverage:
- MarketplaceTab: 20 strings (products, cart, buttons)
- CodeEditorTab: 17 strings (toolbar, sidebar, history)
- SupportTicketTab: 12 strings (auth, headers, status)
- NotesTab: 10 strings (title, stats, toolbar)
- ProfileTab: 10+ strings (guest profile, function keys)
- ExcelTab: 7 strings (toolbar buttons)
- DBnomicsTab: 4 strings (title, toolbar)
- AlphaArenaTab: 3 strings (title, header)
- NodeEditorTab: 2 strings (title, tabs)
- BacktestingTab, AgentConfigTab, ReportBuilderTab: 1 each
- Dashboard Widgets: 12 widget headers

JSON files updated:
- marketplace.json: Added product cards, cart, detailed buttons
- codeEditor.json: Extended toolbar, packages, history sections
- dbnomics.json: Updated title to match UI
- nodeEditor.json: Added tabs section
- backtesting.json: Updated title
- agentConfig.json: Comprehensive keys

All 26 tabs now have useTranslation hooks with 33 JSON namespaces ready for multi-language support.

--- a/fincept-terminal-desktop/public/locales/en/screener.json
+++ b/fincept-terminal-desktop/public/locales/en/screener.json
@@ -1,10 +1,38 @@
 {
-    "title": "STOCK SCREENER",
+    "title": "FRED SERIES BROWSER",
     "header": {
+        "title": "FRED DATA EXPLORER",
         "filters": "FILTERS",
         "results": "RESULTS",
         "saved": "SAVED SCREENS",
         "presets": "PRESETS"
+    },
+    "apiKey": {
+        "required": "API KEY REQUIRED",
+        "configure": "Configure your FRED API key in Settings → Credentials to access economic data.",
+        "getKey": "Get free API key at",
+        "addToSettings": "Add to Settings → Credentials → FRED_API_KEY",
+        "saveAndReload": "Save and reload this tab",
+        "tip": "Make sure you've configured your FRED API key in Settings → Credentials"
+    },
+    "form": {
+        "seriesIds": "SERIES IDs",
+        "startDate": "START DATE",
+        "endDate": "END DATE",
+        "quickAdd": "QUICK ADD"
+    },
+    "buttons": {
+        "fetch": "FETCH",
+        "loading": "LOADING",
+        "browse": "BROWSE SERIES",
+        "done": "DONE"
+    },
+    "chart": {
+        "title": "TIME SERIES CHART",
+        "emptyState": "Enter series IDs and click FETCH to visualize data",
+        "trySuggestion": "Try searching for GDP, UNRATE, or CPIAUCSL",
+        "waiting": "Please wait while we fetch data from FRED...",
+        "errorFetching": "Error Fetching Data"
     },
     "filters": {
         "add": "Add Filter",
