feat: Add AI Quant Lab and Excel tabs to toolbar navigation

--- a/fincept-terminal-desktop/public/locales/en/tabs.json
+++ b/fincept-terminal-desktop/public/locales/en/tabs.json
@@ -14,6 +14,8 @@
     "trading": "Trading",
     "chat": "AI Chat",
     "agents": "Agents",
+    "aiQuantLab": "AI Quant Lab",
+    "excel": "Excel",
     "settings": "Settings",
     "profile": "Profile",
     "forum": "Forum",
