--- a/fincept-terminal-desktop/public/locales/en/auth.json
+++ b/fincept-terminal-desktop/public/locales/en/auth.json
@@ -13,7 +13,7 @@
     "forgotPassword": "Forgot Password?",
     "noAccount": "Don't have an account?",
     "signUp": "Sign Up",
-    "guestInfo": "Guest Access: 50 API requests • 24-hour session",
+    "guestInfo": "Guest Access: 50 credits (one-time) • 24-hour session",
     "errors": {
       "emailPassword": "Please enter both email and password",
       "accountNotFound": "Account not found. Please sign up first to create an account.",
